# hivemind-content-studio

./: .env.example  .gitignore  ASSIMILATION.client-privacy-audit.json  ASSIMILATION.json  ASSIMILATION_LOG.jsonl  ASSIMILATION_LOG.md  CHANGELOG.md  FACELESS_SHORTS_MONETIZATION.md  PRIMARY_FACELESS_SHORTS_PLAN.md  README.md  THIRD_PARTY_NOTICES.md  components.json  config.example.toml  package.json  pyproject.toml
.agents/skills/: clueso-academy-course-trailer  clueso-accessibility-pass  clueso-add-ai-captions  clueso-add-animated-captions  clueso-add-callouts-and-arrows  clueso-add-cta-end-card  clueso-add-key-point-overlays  clueso-add-logo-watermark  clueso-add-lower-thirds  clueso-add-opening-hook  clueso-add-zoom-emphasis  clueso-animated-explainer-video  clueso-annotate-article-screenshots  clueso-apply-brand-colors  clueso-article-to-video  clueso-batch-multi-language-export  clueso-blur-sensitive-info  clueso-branded-intro-outro  clueso-brief-to-launch-video  clueso-chaptered-training-video  clueso-chapterize-video  clueso-compliance-training-localization  clueso-course-module-video  (+68 more)
.claude/: launch.json
docs/: ARCHITECTURE.md  E2E_ENCRYPTION_DESIGN.md  MIGRATION_MAP.md  MONETIZATION.md  OPERATIONS.md
patches/: podcli-ffmpeg8-ass-filter.patch  podcli-remotion-caption-pages.patch
presets/: auto-clipper-local.json
scripts/: bootstrap_unified_studio.py  build_krea2_identity_convrot_checkpoint.py  build_krea2_identity_editor_workflow.py  build_mobile_editor_workflows.py  hivemind-studio-stack  install_krea2_identity.py  install_podcli.sh  migrate_media_state.py  sync_shared_skills.py  vendor_clueso_skills.py
skills/: README.md
webui/: Main.py
workflows/: Krea2 Turbo Identity Optional Apple Silicon.json
(+232 files in other folders)
