# 说明：
# 1. 主依赖来源统一收敛到 pyproject.toml。
# 2. 运行环境通过 uv.lock 固定，避免不同机器解析出不同版本组合。
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hivemind-content-studio"
version = "0.1.0"
description = "Local-first agent studio for faceless video, animation, clipping, media generation, QA, and approval-gated social publishing."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "moviepy==2.1.2",
    "streamlit==1.45.0",
    "edge-tts==7.2.7",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "openai==1.56.1",
    "faster-whisper==1.1.0",
    "loguru==0.7.3",
    "google-generativeai==0.8.6",
    "dashscope==1.20.14",
    "azure-cognitiveservices-speech==1.41.1",
    "redis==5.2.0",
    "python-multipart==0.0.19",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "socksio==1.0.0",
    "pydub==0.25.1",
    "litellm==1.60.0",
    "yt-dlp>=2025.1.1",
    "pillow-avif-plugin>=1.4.6",
    "pillow-heif>=0.18.0",
]

[project.optional-dependencies]
g4f = [
    "g4f==0.5.2.2",
]
mcp = [
    "mcp>=1.9.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
content-studio = "hivemind_content_studio.cli:main"
content-studio-mcp = "hivemind_content_studio.mcp_server:main"
content-studio-api = "hivemind_content_studio.control_api:main"
auto-clipper = "auto_clipper.cli:main"
auto-clipper-mcp = "auto_clipper.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "src/hivemind_content_studio", "src/auto_clipper"]

[tool.uv]
# 当前项目以应用运行形态为主，不作为可发布的 Python 包安装。
package = true

[tool.pytest.ini_options]
testpaths = ["test"]
